--- a/datacollector/datacollector_tablet/app/src/main/res/values-ru/strings.xml
+++ b/datacollector/datacollector_tablet/app/src/main/res/values-ru/strings.xml
@@ -64,6 +64,7 @@
     <string name="input_bclogger_start_select_logger">Выберите LOGGER</string>
     <string name="input_bclogger_start_settings">Настройки</string>
     <string name="input_bclogger_start_load_data">Загрузка данных</string>
+    <string name="input_bclogger_start_import_file">Импорт данных из файла</string>
 
     <string name="input_bclogger_settings_logger_id">LOGGER ID:</string>
     <string name="input_bclogger_settings_scanpoint">Точка ввода:</string>
@@ -78,6 +79,11 @@
     <string name="input_bclogger_dataload_get_debug">Загрузить ERRORS</string>
     <string name="input_bclogger_dataload_clear_device">Очистить файлы</string>
     <string name="input_bclogger_dataload_clear_console">Очистить консоль</string>
+
+    <string name="input_bclogger_fileimport_select_file">Выбор файла импорта</string>
+    <string name="input_bclogger_fileimport_no_file_selected">&lt;Файл не выбран></string>
+    <string name="input_bclogger_fileimport_import_file">Старт импорта</string>
+    <string name="input_bclogger_fileimport_clear_console">Очистить консоль</string>
 
     <string name="input_history_team_number">Номер команды:</string>
     <string name="input_history_team_not_found">Команда [${teamNumber}] не найдена</string>
