--- a/datacollector/datacollector_tablet/app/src/main/res/values/strings.xml
+++ b/datacollector/datacollector_tablet/app/src/main/res/values/strings.xml
@@ -97,6 +97,8 @@
     <string name="input_data_ok">OK</string>
     <string name="input_data_res_missed">Missed:</string>
     <string name="input_data_res_taken">Checked:</string>
+    <string name="input_data_res_start_time">Start time:</string>
+    <string name="input_data_res_finish_time">Finish time:</string>
     <string name="input_data_withdraw_member">Withdraw</string>
 
     <string name="input_withdraw_no_team_number">333</string>
